--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
                         {% if is_privileged or 'Supervisor/Site Officer' in user_roles %}
                             <li class="nav-item"><a class="nav-link" href="/site-officer-form"><i class="bi bi-clipboard2-data me-2"></i> Site Officer Report</a></li>
                         {% endif %}
-                        {% if is_privileged or 'Supervisor/Site Officer' in user_roles %}
+                        {% if is_privileged or 'Supervisor/Site Officer' in user_roles or 'Procurement' in user_roles %}
                             <li class="nav-item"><a class="nav-link" href="/material-requisition-form"><i class="bi bi-box-seam me-2"></i> Material Requisition</a></li>
                         {% endif %}
                         
@@ -260,7 +260,13 @@
                     {% endif %}
                 </ul>
                 {% endif %}
-
+                <ul class="nav flex-column mb-2">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/reports/dashboard">
+                            <i class="bi bi-graph-up-arrow me-2"></i> Reports Dashboard
+                        </a>
+                    </li>
+                    </ul>
                 </nav>
             </aside>
 
@@ -319,7 +325,7 @@
                      {% if is_privileged or 'Supervisor/Site Officer' in user_roles %}
                          <li class="nav-item"><a class="nav-link" href="/site-officer-form"><i class="bi bi-clipboard2-data me-2"></i> Form C: Daily Report</a></li>
                      {% endif %}
-                     {% if is_privileged or 'Supervisor/Site Officer' in user_roles %}
+                     {% if is_privileged or 'Supervisor/Site Officer' in user_roles or 'Procurement' in user_roles %}
                          <li class="nav-item"><a class="nav-link" href="/material-requisition-form"><i class="bi bi-box-seam me-2"></i> Material Requisition</a></li>
                      {% endif %}
                       
@@ -473,6 +479,13 @@
                     {% endif %}
                 </ul>
                 {% endif %}
+                <ul class="nav flex-column mb-2">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/reports/dashboard">
+                            <i class="bi bi-graph-up-arrow me-2"></i> Reports Dashboard
+                        </a>
+                    </li>
+                    </ul>
              </nav>
         </div>
     </div>
