--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
                         </li>
                     </ul>
 
-                    {% if is_admin or 'User' in user_roles %}
+                    {% if is_admin %}
                     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                         <span>Nany Details</span>
                     </h6>
@@ -294,7 +294,7 @@
                          <a class="nav-link logout-link" href="#"><i class="bi bi-box-arrow-right me-2"></i> Logout</a>
                      </li>
                  </ul>
-                 {% if is_admin or 'User' in user_roles %}
+                 {% if is_admin %}
                     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                         <span>Nany Details</span>
                     </h6>
